--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.4"
 Pillow = "^9.2.0"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
+pytest-django = "^4.5.2"
 
 
 [build-system]
